Content overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,6 @@
     object-fit: cover;
   }
   
+  .truncate {
+    @apply text-ellipsis overflow-hidden whitespace-nowrap;
+  }
